[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Textures/SpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scripts/Frog/Player.gd" type="Script" id=2]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.9, 31.9 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 171.638, -22.6205 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
cam = NodePath("../Camera2D")

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 8, 9.142 )
z_index = 100
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 7.5, 8, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.125
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
